--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.foi-header {
+    padding-top: 24px;
+}
+
+.foi-header .header-content {
+    padding-top: 105px;
+    padding-bottom: 40px;
+}
+
+.foi-header .header-content h1 {
+    font-size: 45px;
+    line-height: 1.22;
+}
+
+.foi-header.landing-header {
+    /* background-image: url("../images/bg_1@2x.png"), url("../images/Bg_2@2x.png"); */
+    background-repeat: no-repeat;
+    background-repeat: no-repeat;
+    background-size: 167px, 65%;
+    background-position: left bottom, right top;
 }
